<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_map" android:icon="@android:drawable/ic_dialog_map" android:title="@string/nav_map" />
    <item android:id="@+id/nav_cells" android:icon="@android:drawable/ic_menu_info_details" android:title="@string/nav_cells" />
    <item android:id="@+id/nav_anomalies" android:icon="@android:drawable/ic_dialog_alert" android:title="@string/nav_alerts" />
    <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_preferences" android:title="@string/nav_settings" />
</menu>
