...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.maplibre.android.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
...
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:background="#33000000" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_severity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_severity_high"
...
